@@ -19,9 +19,8 @@ and
 .BR condredirect (1).
 Other helpful commands include
 .BR maildirmake (1),
-.BR maildir2mbox (1),
 and
-.BR maildirwatch (1).
+.BR maildir2mbox (1).
 
 System administrators who want to control the entire
 .B qmail
